--- a/frontend/src/styles/buttons.scss
+++ b/frontend/src/styles/buttons.scss
@@ -4,8 +4,22 @@ button {
     outline: none;
     border: none;
     padding: 1rem;
+    cursor: pointer;
 }
 
 button:hover {
     background-color: var(--DarkGrey);
+}
+
+.purchase {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+    border-radius: 2.5rem;
+}
+
+.btnImage {
+    height: 2rem;
+    width: 2rem;
+    padding: .5rem;
 }
