--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -1,6 +1,7 @@
 /* Imports */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/animate.css@3.5.1');
 
 *, *::before, *::after {
     margin: 0;
