--- a/frontend/src/styles/overlays.scss
+++ b/frontend/src/styles/overlays.scss
@@ -5,7 +5,19 @@
     margin-right: 1rem;
     margin-top: -3rem;
     width: 35rem; 
-    height: 20rem;
+    height: 21rem;
+    z-index: 2;
+    box-shadow: .6rem .6rem .7rem -2px rgba(0,0,0,0.45);
+}
+
+.cart {
+    align-self: flex-end;
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -3rem;
+    width: 30rem; 
+    height: 42rem;
     z-index: 2;
     box-shadow: .6rem .6rem .7rem -2px rgba(0,0,0,0.45);
 }
