--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -14,11 +14,13 @@
     /* Colors*/
     --Black : #000000;
     --White : #FFFFFF;
-    --LightGrey : #E5E5E5;
+    --LightGrey : #e5e5e5;
     --MediumGrey : #C7C7C7;
-    --DarkGrey : #404040;
+    --DarkGrey : rgb(64, 64, 64);
     --Grapefruit : #F56969;
 
+    /* Main background color */
+    --MainBg : var(--LightGrey);
 
     /* Fonts */
     --Main : 'Open Sans', sans-serif;
@@ -27,9 +29,29 @@
 html, body {
     height: 100%;
     width: 100%;
+}
+
+html {
     font-family: var(--Main);
     font-size: 10px;
-    background-color: var(--LightGrey);
+}
+
+body {
+    position: relative;
+    background-color: var(--MainBg);
+}
+
+body::after {
+    content: "";
+    background: url('~@/assets/skateboarding.jpg') no-repeat;
+    background-size: cover;
+    opacity: 0.07;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
 }
 
 .container {
