Fixed order history UI

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -18,6 +18,9 @@
     --MediumGrey : #C7C7C7;
     --DarkGrey : rgb(64, 64, 64);
     --Grapefruit : #F56969;
+    --DarkYellow: #a5b60b;
+    --LightBlue: #d1e2f3;
+    --LightBlueFaded : rgba(209, 226, 243, .5);
 
     /* Main background color */
     --MainBg : var(--LightGrey);
