--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -57,7 +57,12 @@ body::after {
     z-index: -1;   
 }
 
+ul {
+    list-style: none;
+}
+
 .container {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
