--- a/frontend/src/styles/overlays.scss
+++ b/frontend/src/styles/overlays.scss
@@ -1,4 +1,5 @@
-.logIn {
+.logInOverlay {
+    overflow: hidden;
     align-self: flex-end;
     position: absolute;
     right: 0;
@@ -6,6 +7,19 @@
     margin-top: -3rem;
     width: 35rem; 
     height: 21rem;
+    z-index: 2;
+    box-shadow: .6rem .6rem .7rem -2px rgba(0,0,0,0.45);
+}
+
+.logOutOverlay {
+    overflow: hidden;
+    align-self: flex-end;
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -3rem;
+    width: 15rem; 
+    height: 8rem;
     z-index: 2;
     box-shadow: .6rem .6rem .7rem -2px rgba(0,0,0,0.45);
 }
