--- a/frontend/src/styles/overlays.scss
+++ b/frontend/src/styles/overlays.scss
@@ -52,5 +52,39 @@
     bottom: 0;
     background-color: rgba(0,0,0,0.9);
     z-index: 2;
-  }
+}
+
+@media screen and (max-width: 380px) {
+
+    .logInOverlay {
+        right: 0;
+        margin-right: 1rem;
+        margin-top: -3rem;
+        width: 30rem; 
+        height: 21rem;
+        z-index: 2;
+        box-shadow: .6rem .6rem .7rem -2px rgba(0,0,0,0.45);
+    }
+    
+    .logOutOverlay {
+        width: 15rem; 
+        height: 8rem;
+    } 
+
+}
+
+@media screen and (max-width: 340px) {
+
+    .logInOverlay {
+        width: 25rem; 
+        height: 21rem;
+    }
+}
+
+@media screen and (max-width: 285px) {
+    .cart {
+        width: 23rem; 
+        height: 42rem;
+    }
+}
 
