Fixed responsive mutation

--- a/frontend/src/styles/overlays.scss
+++ b/frontend/src/styles/overlays.scss
@@ -79,6 +79,11 @@
         width: 25rem; 
         height: 21rem;
     }
+
+    .cart {
+        width: 25rem; 
+        height: 42rem;
+    }
 }
 
 @media screen and (max-width: 285px) {
